src/objects/Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Field_Data_Type__c</fullName>
        <label>Field Data Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>not equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ends with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>does not contain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
          
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Object_Type__c</fullName>
        <label>Related Object Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <label>Relationship Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>Criteria</relationshipLabel>
        <relationshipName>Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Criteria</label>
    <nameField>
        <label>Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>